--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,17 +1,18 @@
 backend:
   name: github
-  repo: <Podyujeong>/<maeng>
+  repo: Podyujeong/maeng  
   branch: main
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "content/blog"
+  - name: "posts" 
+    label: "Posts"
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Body", name: "body", widget: "markdown" }
