--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,10 @@
 backend:
   name: github
-  repo: Podyujeong/maeng  # 👉 자신의 GitHub 유저명/저장소 이름
-  branch: main  # 기본 브랜치 이름 (예: main)
+  repo: Podyujeong/maeng 
+  branch: main
 
-media_folder: static/uploads  # 이미지 업로드 경로 (저장소 안의 경로)
-public_folder: /uploads       # 이미지 접근 경로 (웹에서 접근하는 경로)
-
+media_folder: static/uploads 
+public_folder: /uploads 
 collections:
   - name: "posts"
     label: "Posts"
