--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,10 +1,11 @@
 backend:
   name: github
-  repo: Podyujeong/maeng 
+  repo: Podyujeong/maeng
   branch: main
 
-media_folder: static/uploads 
-public_folder: /uploads 
+media_folder: /static/uploads
+public_folder: /uploads
+
 collections:
   - name: "posts"
     label: "Posts"
